petite mise à jour qui traînait sur l'exercice de ML

--- a/inst/exerciceML/exerciceML.qmd
+++ b/inst/exerciceML/exerciceML.qmd
@@ -1,6 +1,10 @@
 ---
 title: "Exercice Machine learning (avec correction)"
-format: html
+format: 
+  html:
+    toc: false
+    number-sections: true
+  
 editor: visual
 ---
 
